kubernetes/006_pacman_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pacman
spec:
  rules:
    - host: ${DOCKER_APPLICATION_FQDN}
      http:
        paths:
          - backend:
              serviceName: pacman
              servicePort: 80
